--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,5 +9,18 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="text/javascript">
+      atOptions = {
+        key: "a2c03100c638f1b1321660f961b2d18f",
+        format: "iframe",
+        height: 300,
+        width: 160,
+        params: {},
+      };
+    </script>
+    <script
+      type="text/javascript"
+      src="//www.topcreativeformat.com/a2c03100c638f1b1321660f961b2d18f/invoke.js"
+    ></script>
   </body>
 </html>
