--- a/index.html
+++ b/index.html
@@ -2,14 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://www.svgrepo.com/show/419503/anime-and-manga.svg"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Playwrite+NZ:wght@100..400&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>HentaiX</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       atOptions = {
         key: "a2c03100c638f1b1321660f961b2d18f",
         format: "iframe",
@@ -21,6 +31,6 @@
     <script
       type="text/javascript"
       src="//www.topcreativeformat.com/a2c03100c638f1b1321660f961b2d18f/invoke.js"
-    ></script>
+    ></script> -->
   </body>
 </html>
