--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <!-- <script type="text/javascript">
+    <script type="text/javascript">
       atOptions = {
         key: "a2c03100c638f1b1321660f961b2d18f",
         format: "iframe",
@@ -31,6 +31,6 @@
     <script
       type="text/javascript"
       src="//www.topcreativeformat.com/a2c03100c638f1b1321660f961b2d18f/invoke.js"
-    ></script> -->
+    ></script>
   </body>
 </html>
